fixed userhome text wrap

--- a/public/less/userhome_treatment.less
+++ b/public/less/userhome_treatment.less
@@ -49,6 +49,7 @@ body {
   margin: 3rem 0 3rem 6rem;
   font-size: 3em;
   font-weight: 200;
+  min-width: 420px;
 }
 
 .userhome-main {
